# autonomous-mini-4wd

./: .gitignore  README.md  Try_sld.cpp
Control/: Control.cpp
Lanes/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  test.cpp
Lanes/LSD/: CMakeLists.txt
Lanes/curve_fitting/: CMakeLists.txt  curve_fitting.cpp
Lanes/hugh/: CMakeLists.txt
Lanes/hugh_lsd/: main
Lanes/main/: main.cpp
Lanes/src/: Camera_Params.cpp  Camera_Params.h  LanesDetection.cpp  LanesDetection.h  curve_fitting.cpp  curve_fitting_poly.cpp  lanes_detection.cpp  lanes_detection.h  lanes_detection_1.cpp  launch_lanes_detection.cpp  poly_fit.cpp  square_root_fit.cpp  test.cpp
Lanes/test/: CMakeLists.txt  lanes_detection.cpp  lanes_detection.h  launch_lanes_detection.cpp  test  test.cpp
ROS/: CMakeLists.txt  listener.py  talker.cpp
Test/: CMakeCache.txt  CMakeLists.txt  Makefile  Test  Test.cpp  cmake_install.cmake  out.avi
test/: lanes_detection.cpp  lanes_detection.h  launch_lanes_detection.cpp
